Set up initial implementation for dbClient.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ app/__pycache__/config.cpython-37.pyc
 app/__pycache__/__init__.cpython-37.pyc
 app/__pycache__/routes.cpython-37.pyc
 app/__pycache__/__init__.cpython-37.pyc
+app/__pycache__/__init__.cpython-37.pyc
+app/__pycache__/dataStructs.cpython-37.pyc
+app/__pycache__/dbClient.cpython-37.pyc
+app/__pycache__/routes.cpython-37.pyc
+app/playground.py
